--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				    		</ul>
 				      </div>
 		             </div>
-		                 <div class="video_palyer">
+		                 <!--div class="video_palyer">
 								<iframe src="//player.vimeo.com/video/24363983" width="100%" height="150px" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen=""></iframe> 
-		                </div>        
+		                </div-->        
 		     	          
 		          		<div class="social_network_likes">
 				      		<ul>
